--- a/HTML_01-1.html
+++ b/HTML_01-1.html
@@ -18,7 +18,7 @@
     <h1>분야별 검색어</h1>
     <p>
       안녕하세요<br />
-      <strong></strong><u>드라마</u></strong>
+      <strong><u>드라마</u></strong>
       <ol>
         <li>구미호던1938</li>
         <li>진짜가 나타났다!</li>
