--- a/HTML_01-1.html
+++ b/HTML_01-1.html
@@ -2,7 +2,7 @@
 <html lang="ko">
   <head>
     <meta charset="utf-8" />
-    <title>링크 표시하기</title>
+    <title>태그사용해보기</title>
   </head>
   
   <body>
